nenolod     2007/04/02 14:11:06 UTC	(20070402-8051)
  Log:
  - add tracking of last modified TS
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 
  +20 -9	trunk/modules/backend/flatfile.c (File Modified) 
  +2 -2		trunk/modules/chanserv/akick.c (File Modified) 
  +4 -2		trunk/modules/chanserv/flags.c (File Modified) 
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 
  +2 -2		trunk/modules/chanserv/xop.c (File Modified) 
  +42 -4	trunk/src/account.c (File Modified) 


nenolod     2007/04/02 12:40:41 UTC	(20070402-8049)
  Log:
  - rewrite the logging system.
  

  Changes:	Modified:
  +51 -4	trunk/dist/example.conf (File Modified) 
  +12 -2	trunk/include/tools.h (File Modified) 
  +1 -19	trunk/modules/saslserv/main.c (File Modified) 
  +1 -4		trunk/src/atheme.c (File Modified) 
  +61 -16	trunk/src/conf.c (File Modified) 
  +202 -89	trunk/src/logger.c (File Modified) 
  +5 -9		trunk/src/signal.c (File Modified) 


jilles      2007/04/02 11:49:10 UTC	(20070402-8047)
  Log:
  Update comments in tools.h.
  

  Changes:	Modified:
  +2 -2		trunk/include/tools.h (File Modified) 


nenolod     2007/04/02 11:14:11 UTC	(20070402-8045)
  Log:
  - enable $Id$ expansion.
  

  Changes:	Modified:
  +1 -1		trunk/src/logger.c (File Modified) (Property Modified)


nenolod     2007/04/02 11:13:30 UTC	(20070402-8043)
  Log:
  - split out logging functions into logger.c.
  

  Changes:	Modified:
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +0 -163	trunk/src/function.c (File Modified) 
  +179 -0	trunk/src/logger.c (File Added) 


nenolod     2007/04/02 11:05:33 UTC	(20070402-8041)
  Log:
  - chase r8039.
  

  Changes:	Modified:
  +2 -2		trunk/include/tools.h (File Modified) 


nenolod     2007/04/02 11:04:24 UTC	(20070402-8039)
  Log:
  - uint8_t -> unsigned char
  - uint32_t -> unsigned int
  

  Changes:	Modified:
  +14 -14	trunk/src/arc4random.c (File Modified) 


jilles      2007/04/02 11:03:07 UTC	(20070402-8037)
  Log:
  Chase r8035.
  
