@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService FLAGS functions.
  *
- * $Id: flags.c 8051 2007-04-02 14:11:06Z nenolod $
+ * $Id: flags.c 8055 2007-04-02 14:24:13Z nenolod $
  */
 
 #include "atheme.h"
@@ -13,7 +13,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/flags", FALSE, _modinit, _moddeinit,
-	"$Id: flags.c 8051 2007-04-02 14:11:06Z nenolod $",
+	"$Id: flags.c 8055 2007-04-02 14:24:13Z nenolod $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -147,7 +147,7 @@ static void cs_cmd_flags(sourceinfo_t *si, int parc, char *parv[])
 				command_success_nodata(si, _("%-5d %-22s %s (%s) [modified %s]"), i, ca->myuser ? ca->myuser->name : ca->host, bitmask_to_flags(ca->level, chanacs_flags), str1,
 					time_ago(ca->ts));
 			else
-				command_success_nodata(si, _("%-5d %-22s %s [modified %s])", i, ca->myuser ? ca->myuser->name : ca->host, bitmask_to_flags(ca->level, chanacs_flags),
+				command_success_nodata(si, _("%-5d %-22s %s [modified %s]"), i, ca->myuser ? ca->myuser->name : ca->host, bitmask_to_flags(ca->level, chanacs_flags),
 					time_ago(ca->ts));
 			i++;
 		}
