@@ -1,3 +1,12 @@
+nenolod     2007/04/02 14:15:42 UTC	(20070402-8053)
+  Log:
+  - this didn't get committed
+  
+
+  Changes:	Modified:
+  +2 -2		trunk/include/account.h (File Modified) 
+
+
 nenolod     2007/04/02 14:11:06 UTC	(20070402-8051)
   Log:
   - add tracking of last modified TS
